# coding-dbt

./: README.md
northwind-project/: pyproject.toml
northwind-project-deploy-and-docs/: .user.yml  profiles.yml
northwind-project-deploy-and-docs/docs/: index.md
northwind-project-deploy-and-docs/northwinddeploy/: dbt_project.yml
northwind-project-deploy-and-docs/northwinddeploy/models/raw/: raw_order_details.sql  raw_orders.sql
northwind-project-deploy-and-docs/northwinddeploy/models/reports/: report_clients_to_marketing.sql
northwind-project-deploy-and-docs/northwinddeploy/models/staging/: stg_customers.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql
northwind-project-kickstarter/: Dockerfile  README.md  docker-compose.yml  profiles.yml  requirements.txt
northwind-project-kickstarter/.github/workflows/: python-app.yml
northwind-project-kickstarter/northwind/: .user.yml  dbt_project.yml
northwind-project-kickstarter/northwind/docs/: overview.md
northwind-project-kickstarter/northwind/models/: schema.yml
northwind-project-kickstarter/northwind/models/staging/: schema.yml
northwind-project-tests/: README.md
northwind-project-tests/northwindtests/: dbt_project.yml
northwind-project-tests/northwindtests/models/staging/crm/: _crm__models.yml  _crm__sources.yml  stg_customer.sql  stg_orders.sql
northwind-project/northwind/models/marts/: totals.sql
northwind-project/northwind/models/raw/crm/: raw_crm__places.sql
northwind-project/northwind/models/staging/crm/: stg_crm__places.sql
northwind-project/northwind/seeds/: places.csv
